--- a/index.html
+++ b/index.html
@@ -1,198 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link href="css/reset.css" rel="stylesheet" />
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  </head>
-  <body>
+    <link href="css/style.css">
+</head>
+<body>
     <div class="wrapper">
-      <header class="header">
-        <div class="header-top">
-          <div class="container">
-            <div class="header-inner-top">
-              <div class="header-left">
-                <div class="brand">
-                  <img src="images/flipkart-logo.png" alt="brand-logo" />
-                </div>
-                <div class="search">
-                  <input
-                    type="text"
-                    placeholder="Search for products, brands and more"
-                  />
-                </div>
-              </div>
-              <div class="header-right">
-                <div class="login">
-                  <a href="#" class="login-btn"  title="Login">Login</a>
-                  <div class="login-options">
-                    <ul class="login-list items-list">
-                      <li><a href="#" class="item">ABCD</a></li>
-                      <li><a href="#" class="item">ABCD</a></li>
-                      <li><a href="#" class="item">ABCD</a></li>
-                      <li><a href="#" class="item">ABCD</a></li>
-                      <li><a href="#" class="item">ABCD</a></li>
-                    </ul>
+        <header class="header">
 
-                  </div>
-                </div>
-                <div class="more-block">
-                  <div class="more-btn">
-                    <span class="more-text">More</span>
-                  </div>
-                    <div class="more-option">
-                      <ul class="more-list items-list">
-                        <li><a href="#" class="item">ABCD</a></li>
-                        <li><a href="#" class="item">ABCD</a></li>
-                        <li><a href="#" class="item">ABCD</a></li>
-                        <li><a href="#" class="item">ABCD</a></li>
-                        <li><a href="#" class="item">ABCD</a></li>
-                      </ul>
-                    </div>
-                </div>
-                <div class="cart">
-                  <span class="cart-img"><svg class="V3C5bO" width="14" height="14" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path class="_1bS9ic" d="M15.32 2.405H4.887C3 2.405 2.46.805 2.46.805L2.257.21C2.208.085 2.083 0 1.946 0H.336C.1 0-.064.24.024.46l.644 1.945L3.11 9.767c.047.137.175.23.32.23h8.418l-.493 1.958H3.768l.002.003c-.017 0-.033-.003-.05-.003-1.06 0-1.92.86-1.92 1.92s.86 1.92 1.92 1.92c.99 0 1.805-.75 1.91-1.712l5.55.076c.12.922.91 1.636 1.867 1.636 1.04 0 1.885-.844 1.885-1.885 0-.866-.584-1.593-1.38-1.814l2.423-8.832c.12-.433-.206-.86-.655-.86" fill="#fff"></path></svg></span>
-                  <span class="cart-text">Cart</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="header-bottom">
-          <div class="container-fluid">
-            <ul class="menu">
-              <li class="menu-item">
-                <a href="#" class="category-link">
-                  <span class="img-block">
-                    <img src="images/offers.png" alt="" />
-                  </span>
-                  <span class="category-name">Top Offers</span>
-                </a>
-              </li>
-              <li class="menu-item">
-                <a href="#" class="category-link">
-                  <span class="img-block">
-                    <img src="images/grocery.png" alt="" />
-                  </span>
-                  <span class="category-name"> Grocery</span>
-                </a>
-              </li>
-              <li class="menu-item">
-                <a href="#" class="category-link">
-                  <span class="img-block">
-                    <img src="images/mobile.png" alt=""> </span>
-                  <span class="category-name"> Mobiles</span>
-                </a>
-              </li>
-              <li class="menu-item has-menu">
-                <a href="#" class="category-link">
-                  <span class="img-block">
-                    <img src="images/fashion.png" alt="" />
-                  </span>
-                  <span class="category-name"> Fashion </span>
-                </a>
-                <div class="menu-options">
-                  <ul class="items-list">
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                  </ul>
-                </div>
-              </li>
-              <li class="menu-item has-menu">
-                <a href="#" class="category-link">
-                  <span class="img-block">
-                    <img src="images/electronics.png" alt="" />
-                  </span>
-                  <span class="category-name">Electronics</span>
-                </a>
-                <div class="menu-options">
-                  <ul class="items-list">
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                  </ul>
-                </div>
-              </li>
-              <li class="menu-item has-menu">
-                <a href="#" class="category-link">
-                  <span class="img-block">
-                    <img src="images/home.jpg" alt="" />
-                  </span>
-                  <span class="category-name">Home</span>
-                </a>
-                <div class="menu-options">
-                  <ul class="items-list">
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                  </ul>
-                </div>
-              </li>
-              <li class="menu-item has-menu">
-                <a href="#" class="category-link">
-                  <span class="img-block">
-                    <img src="images/appliances.png" alt="" />
-                  </span>
-                  <span class="category-name"> Appliances</span>
-                </a>
-                <div class="menu-options">
-                  <ul class="items-list">
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                  </ul>
-                </div>
-              </li>
-              <li class="menu-item">
-                <a href="#" class="category-link">
-                  <span class="img-block">
-                    <img src="images/travel.png" alt=""> </span>
-                  <span class="category-name"> Travel</span>
-                </a>
-              </li>
-              <li class="menu-item has-menu">
-                <a href="#" class="category-link">
-                  <span class="img-block">
-                    <img src="images/toys.png" alt="" />
-                  </span>
-                  <span class="category-name">Beauty, Toys & More</span>
-                </a>
-                <div class="menu-options">
-                  <ul class="items-list">
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                  </ul>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </header>
-      <main class="main-wrap">
-        <h1>Hello</h1>
-      </main>
+        </header>
+        <main class="main-wrap">
+            <h1>Hello</h1>
+        </main>
     </div>
-    <footer class="footer"></footer>
-  </body>
+    <footer class="footer">
+
+    </footer>
+    
+</body>
 </html>
