--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
       rel="stylesheet"
     />
     <link href="css/reset.css" rel="stylesheet" />
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
     <link href="css/style.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
@@ -33,34 +36,45 @@
               </div>
               <div class="header-right">
                 <div class="login">
-                  <a href="#" class="login-btn"  title="Login">Login</a>
+                  <a href="#" class="login-btn" title="Login">Login</a>
                   <div class="login-options">
                     <ul class="login-list items-list">
-                      <li><a href="#" class="item">ABCD</a></li>
-                      <li><a href="#" class="item">ABCD</a></li>
-                      <li><a href="#" class="item">ABCD</a></li>
-                      <li><a href="#" class="item">ABCD</a></li>
-                      <li><a href="#" class="item">ABCD</a></li>
+                      <li><a href="#" class="item">Signup</a></li>
+                      <li><a href="#" class="item">Orders</a></li>
+                      <li><a href="#" class="item">wishlist</a></li>
+                      <li><a href="#" class="item">Rewards</a></li>
+                      <li><a href="#" class="item">My profile</a></li>
                     </ul>
-
                   </div>
                 </div>
                 <div class="more-block">
                   <div class="more-btn">
                     <span class="more-text">More</span>
                   </div>
-                    <div class="more-option">
-                      <ul class="more-list items-list">
-                        <li><a href="#" class="item">ABCD</a></li>
-                        <li><a href="#" class="item">ABCD</a></li>
-                        <li><a href="#" class="item">ABCD</a></li>
-                        <li><a href="#" class="item">ABCD</a></li>
-                        <li><a href="#" class="item">ABCD</a></li>
-                      </ul>
-                    </div>
+                  <div class="more-option">
+                    <ul class="more-list items-list">
+                      <li><a href="#" class="item">Customer Care</a></li>
+                      <li><a href="#" class="item">Advertisement</a></li>
+                      <li><a href="#" class="item">Download App</a></li>
+                      <li><a href="#" class="item">Sell On Flipkart</a></li>
+                    </ul>
+                  </div>
                 </div>
                 <div class="cart">
-                  <span class="cart-img"><svg class="V3C5bO" width="14" height="14" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path class="_1bS9ic" d="M15.32 2.405H4.887C3 2.405 2.46.805 2.46.805L2.257.21C2.208.085 2.083 0 1.946 0H.336C.1 0-.064.24.024.46l.644 1.945L3.11 9.767c.047.137.175.23.32.23h8.418l-.493 1.958H3.768l.002.003c-.017 0-.033-.003-.05-.003-1.06 0-1.92.86-1.92 1.92s.86 1.92 1.92 1.92c.99 0 1.805-.75 1.91-1.712l5.55.076c.12.922.91 1.636 1.867 1.636 1.04 0 1.885-.844 1.885-1.885 0-.866-.584-1.593-1.38-1.814l2.423-8.832c.12-.433-.206-.86-.655-.86" fill="#fff"></path></svg></span>
+                  <span class="cart-img"
+                    ><svg
+                      class="V3C5bO"
+                      width="14"
+                      height="14"
+                      viewBox="0 0 16 16"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        class="_1bS9ic"
+                        d="M15.32 2.405H4.887C3 2.405 2.46.805 2.46.805L2.257.21C2.208.085 2.083 0 1.946 0H.336C.1 0-.064.24.024.46l.644 1.945L3.11 9.767c.047.137.175.23.32.23h8.418l-.493 1.958H3.768l.002.003c-.017 0-.033-.003-.05-.003-1.06 0-1.92.86-1.92 1.92s.86 1.92 1.92 1.92c.99 0 1.805-.75 1.91-1.712l5.55.076c.12.922.91 1.636 1.867 1.636 1.04 0 1.885-.844 1.885-1.885 0-.866-.584-1.593-1.38-1.814l2.423-8.832c.12-.433-.206-.86-.655-.86"
+                        fill="#fff"
+                      ></path></svg
+                  ></span>
                   <span class="cart-text">Cart</span>
                 </div>
               </div>
@@ -89,7 +103,8 @@
               <li class="menu-item">
                 <a href="#" class="category-link">
                   <span class="img-block">
-                    <img src="images/mobile.png" alt=""> </span>
+                    <img src="images/mobile.png" alt="" />
+                  </span>
                   <span class="category-name"> Mobiles</span>
                 </a>
               </li>
@@ -102,11 +117,11 @@
                 </a>
                 <div class="menu-options">
                   <ul class="items-list">
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
+                    <li><a href="#" class="item">Men's wear</a></li>
+                    <li><a href="#" class="item">Kids wear</a></li>
+                    <li><a href="#" class="item">Western wear</a></li>
+                    <li><a href="#" class="item">Ethnic wear</a></li>
+                    <li><a href="#" class="item">Footwear</a></li>
                   </ul>
                 </div>
               </li>
@@ -119,11 +134,11 @@
                 </a>
                 <div class="menu-options">
                   <ul class="items-list">
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
+                    <li><a href="#" class="item">Laptop and Desktop</a></li>
+                    <li><a href="#" class="item">Home and Health</a></li>
+                    <li><a href="#" class="item">Gaming</a></li>
+                    <li><a href="#" class="item">Peripherals</a></li>
+                    <li><a href="#" class="item">Headphones</a></li>
                   </ul>
                 </div>
               </li>
@@ -136,11 +151,11 @@
                 </a>
                 <div class="menu-options">
                   <ul class="items-list">
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
+                    <li><a href="#" class="item">Home Decor</a></li>
+                    <li><a href="#" class="item">Kitchen</a></li>
+                    <li><a href="#" class="item">Cleaning</a></li>
+                    <li><a href="#" class="item">Space saving</a></li>
+                    <li><a href="#" class="item">Pets and Gardening</a></li>
                   </ul>
                 </div>
               </li>
@@ -153,18 +168,19 @@
                 </a>
                 <div class="menu-options">
                   <ul class="items-list">
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
+                    <li><a href="#" class="item">Air conditioners</a></li>
+                    <li><a href="#" class="item">Refrigerators</a></li>
+                    <li><a href="#" class="item">Miocrowaves</a></li>
+                    <li><a href="#" class="item">Fans</a></li>
+                    <li><a href="#" class="item">Home Appliances</a></li>
                   </ul>
                 </div>
               </li>
               <li class="menu-item">
                 <a href="#" class="category-link">
                   <span class="img-block">
-                    <img src="images/travel.png" alt=""> </span>
+                    <img src="images/travel.png" alt="" />
+                  </span>
                   <span class="category-name"> Travel</span>
                 </a>
               </li>
@@ -177,11 +193,11 @@
                 </a>
                 <div class="menu-options">
                   <ul class="items-list">
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
-                    <li><a href="#" class="item">ABCD</a></li>
+                    <li><a href="#" class="item">Soft toys</a></li>
+                    <li><a href="#" class="item">Beauty</a></li>
+                    <li><a href="#" class="item">Gifts</a></li>
+                    <li><a href="#" class="item">Cards</a></li>
+                    <li><a href="#" class="item">Sports</a></li>
                   </ul>
                 </div>
               </li>
@@ -189,9 +205,7 @@
           </div>
         </div>
       </header>
-      <main class="main-wrap">
-        <h1>Hello</h1>
-      </main>
+      <main class="main-wrap"></main>
     </div>
     <footer class="footer"></footer>
   </body>
